add view + template, organize into packages